src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Request_Cancellation_Reason__c</fullName>
        <label>Request Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Flight Delay/Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Backup Booking</fullName>
                </value>
                <value>
                    <fullName>Flew Commercial</fullName>
                </value>
                <value>
                    <fullName>Flew Own/Company Aircraft</fullName>
                </value>
                <value>
                    <fullName>Flew with Friend</fullName>
                </value>
                <value>
                    <fullName>Length of Delay</fullName>
                </value>
                <value>
                    <fullName>Meeting Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passenger Emergency</fullName>
                </value>
                <value>
                    <fullName>Passenger Illness</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Cancelled__c</fullName>
        <label>Request Cancelled?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Stage__c</fullName>
        <inlineHelpText>The time should be in increments of 15 minutes (.25). For example, 1.25 = 1 hour and 15 minutes.</inlineHelpText>
        <label>Request Stage Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Due_Date__c</fullName>
        <label>Research Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Research_Stage__c</fullName>
        <inlineHelpText>The time should be in increments of 15 minutes (.25). For example, 1.25 = 1 hour and 15 minutes.</inlineHelpText>
        <label>Research Stage Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <formula>IF( Risk_Score__c &lt;=2, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U0000003JFa9&quot;, &quot;Green&quot;, 16,16),
IF (Risk_Score__c &gt;2.75, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U0000003JFdD&quot;, &quot;Red&quot;, 16,16),
IF (Risk_Score__c &gt;2, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U0000003JFgO&quot;, &quot;Yellow&quot;, 16,16),
&quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <formula>Airport_Feasibility_Weighted_Score__c  +  Airport_Weather_Weighted_Score__c  +  Backup_Weighted_Score__c  +  Day_of_Travel_Weighted_Score__c  +  Depart_Date_Weighted_Score__c  +  Depart_Flex_Weighted_Score__c  +  Mission_Feasibility_Weighted_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 1</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Trip Managers</relationshipLabel>
        <relationshipName>Trip_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 2</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Trip Managers (Selected Aircraft 2)</relationshipLabel>
        <relationshipName>Trip_Managers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft 3</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Trip Managers (Selected Aircraft 3)</relationshipLabel>
        <relationshipName>Trip_Managers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Trip Managers (Selected Aircraft)</relationshipLabel>
        <relationshipName>Trip_Managers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Program_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Program Period</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Trip Managers (Selected Program Period)</relationshipLabel>
        <relationshipName>Trip_Managers5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Trip Managers</relationshipLabel>
        <relationshipName>Trip_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size_of_Pet_s__c</fullName>
        <label>Size of Pet(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Luggage__c</fullName>
        <label>Special Luggage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Trip_Request_Notes__c</fullName>
        <label>Special Trip Request Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Account_Name__c</fullName>
        <formula>&apos;,&apos;&amp; Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Arr_Airport__c</fullName>
        <label>Strategy Arr Airport</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Cabin_Type__c</fullName>
        <formula>&apos;,&apos;&amp; TEXT(Aircraft_Type_Requested__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Cabin Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Dep_Airport__c</fullName>
        <label>Strategy Dep Airport</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Itin_Type__c</fullName>
        <formula>&apos;,&apos;&amp; TEXT(Trip_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Itin Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Peak_High_Vol__c</fullName>
        <formula>&apos;,&apos;&amp;&apos;No,&apos;&amp;IF(OR( TEXT(Traveling_on_a_High_Volume_Day__c) = &quot;Yes&quot;, TEXT( Traveling_on_a_Peak_Day__c )= &quot;Yes&quot;),&quot;Yes&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Peak High Vol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Season__c</fullName>
        <formula>&apos;NA,&apos;&amp;Trip_Season__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Sensitive_Event_Description__c</fullName>
        <inlineHelpText>Please provide details of your time sensitive event.</inlineHelpText>
        <label>Time Sensitive Event Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Invested__c</fullName>
        <formula>Request_Stage__c  +  Research_Stage__c + Booking_Confirmation_Stage__c + QC_Stage__c + Post_Flight_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Invested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Passengers__c</fullName>
        <formula>of_Adult_Passengers__c + of_Child_Passengers__c + of_Lap_Babies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Passengers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_to_a_Time_Sensitive_Event__c</fullName>
        <label>Travel to/from a Time Sensitive Event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traveling_on_a_High_Volume_Day__c</fullName>
        <label>Traveling on a High Volume Day?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traveling_on_a_Peak_Day__c</fullName>
        <label>Traveling on a Peak Day?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Season__c</fullName>
        <formula>IF( OR(MONTH(Date_of_Trip__c)=11,MONTH(Date_of_Trip__c)=12,MONTH(Date_of_Trip__c)=1,MONTH(Date_of_Trip__c)=2,MONTH(Date_of_Trip__c)=3),&quot;WINTER&quot;,IF( OR(MONTH(Date_of_Trip__c)=6,MONTH(Date_of_Trip__c)=7,MONTH(Date_of_Trip__c)=8,MONTH(Date_of_Trip__c)=9),&quot;SUMMER&quot;,&quot;NA&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trip Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Type__c</fullName>
        <label>Trip Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Way</fullName>
                </value>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
                <value>
                    <fullName>Same-Day Round Trip</fullName>
                </value>
                <value>
                    <fullName>Multi-Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Pet_s__c</fullName>
        <label>Type of Pet(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WiFi_Required__c</fullName>
        <label>WiFi Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Adult_Passengers__c</fullName>
        <label># of Adult Passengers</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Child_Passengers__c</fullName>
        <label># of Child Passengers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Lap_Babies__c</fullName>
        <label># of Babies Under 24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Pets__c</fullName>
        <label># of Potential Pets Traveling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>NAME</columns>
        <columns>Trip_Type__c</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Trips</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BeingResearched_Trips</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <columns>Research_Due_Date__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Being Researched</value>
        </filters>
        <label>Being Researched - ALL</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - ALL</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_Last_30_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - Last 30 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_Last_60_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - Last 60 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_Last_90_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - Last 90 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_Next_30_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - Next 30 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_Next_60_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:60</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - Next 60 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Booked_Trips_Next_90_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Booked Trips - Next 90 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Trips_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Trips - ALL</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Trips_Last_90_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Trips - Last 90 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Trips_Next_90_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Trip__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Trips - Next 90 Days</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InProcess_Trips</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Date_of_Trip__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Departing_Airport__c</columns>
        <columns>Arriving_Airport__c</columns>
        <columns>Trip_Type__c</columns>
        <columns>Research_Due_Date__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <label>In Process - ALL</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyClosedTripMgrs</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Trip Managers</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Trip Managers</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Commercial_Flight</fullName>
        <active>true</active>
        <description>Please provide details regarding the connecting Commercial Flight.</description>
        <errorConditionFormula>AND(ISPICKVAL( Connecting_To_From_Commercial_Flight__c , &quot;Yes&quot;),  ISBLANK(Commercial_Flight_Details__c )
)</errorConditionFormula>
        <errorDisplayField>Commercial_Flight_Details__c</errorDisplayField>
        <errorMessage>Please provide details regarding the connecting Commercial Flight.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purpose_of_Trip_if_Other</fullName>
        <active>true</active>
        <description>You must populate a Purpose of Trip, if Other is selected.</description>
        <errorConditionFormula>AND(ISPICKVAL ( Purpose_of_Trip__c , &quot;Other&quot;), ISBLANK( Purpose_of_Trip_if_Other__c ))</errorConditionFormula>
        <errorDisplayField>Purpose_of_Trip_if_Other__c</errorDisplayField>
        <errorMessage>You must populate a Purpose of Trip, if Other is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Score_must_not_be_greater_than_3</fullName>
        <active>true</active>
        <description>If the risk score is greater than three, display an error.</description>
        <errorConditionFormula>Risk_Score__c &gt; 3</errorConditionFormula>
        <errorMessage>Risk Score cannot be over 3.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Sensitive_Event</fullName>
        <active>true</active>
        <description>Please provide details of your time sensitive event.</description>
        <errorConditionFormula>AND( ISPICKVAL( Travel_to_a_Time_Sensitive_Event__c  , &quot;Yes&quot;), 
ISBLANK(Time_Sensitive_Event_Description__c))</errorConditionFormula>
        <errorDisplayField>Time_Sensitive_Event_Description__c</errorDisplayField>
        <errorMessage>Please provide details of your time sensitive event.</errorMessage>
    </validationRules>
</CustomObject>